# Game-Engine-Design

./: .gitignore.txt  CMakeLists.txt  GEDProject.sln  README.md
Debug/: GEDProject.ilk  lnk{5E2783DE-B163-421C-8593-6E7413759E59}.tmp
GEDProject/: AbstractHealer.h  AbstractNPC.h  AbstractPlanet.h  AbstractSupplier.h  ArcherEnemy.h  Arid.h  BattleState.cpp  EnemyFactory.cpp  ExplorationState.cpp  Flat.h  GEDProject.vcxproj  GEDProject.vcxproj.filters  GunnerEnemy.h  Hub.h  IdleState.cpp  Marine.h  MeleeEnemy.h  Menu.h  Planet.cpp  PlanetDecorator.h  PlanetGenerator.h  Polar.cpp  Polar.h  ResourceSupplier.cpp  ResourceSupplier.h  Rough.cpp  StateEnum.h  SupplierFactory.cpp  Target.h  TravellingState.cpp  Tropical.cpp  Tropical.h  main.cpp  random.cpp
GEDProject/Debug/: menu.obj.enc  vc140.idb  vc141.idb
Visual Studio 2015/settings/: CurrentSettings.vssettings
headers/: AbstractEnemyNPC.h  BattleState.h  EnemyFactory.h  HealerFactory.h  LootState.h  Menu.h  NPCConverseState.h  NPCGenerator.h  Observer.h  Player.h  PlayerState.h  Rough.h  Subject.h  SupplierFactory.h  TravellingState.h  WeaponMerchant.h
headers/Enemies/: AbstractEnemyNPC.h  ArcherEnemy.h  GunnerEnemy.h  MeleeEnemy.h
headers/Factories/: EnemyFactory.h  HealerFactory.h  SupplierFactory.h
headers/NPCs/: AbstractNPC.h  NPCGenerator.h
headers/Planet/: Planet.h  (+1 more)
source/: Menu.cpp  Player.cpp
sources/: Arid.cpp  Flat.cpp  GameEndState.cpp  HealerFactory.cpp  Hub.cpp  LootState.cpp  Marine.cpp  Medic.cpp  Menu.cpp  NPCConverseState.cpp  NPCGenerator.cpp  PlanetGenerator.cpp  WeaponMerchant.cpp
(+47 files in other folders)
